tests/phase_00_lexer_errors/invalid/04_unclosed_string_newline.hulk
// El lexer debe reportar cadena sin cerrar al encontrar salto de linea antes de cerrar comillas.
"hola
mundo";
